force-app/main/default/objects/Support_Request__c/fields/Actual_Efforts_In_Days2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Efforts_In_Days2__c</fullName>
    <label>Actual Efforts(In Days)</label>
    <summarizedField>SR_Effort__c.Efforts_in_Person_Days__c</summarizedField>
    <summaryForeignKey>SR_Effort__c.Support_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>