force-app/main/default/objects/Support_Request__c/fields/Assigned_Person__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Person__c</fullName>
    <label>Assigned Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yash Parasiya</fullName>
            </value>
            <value>
                <fullName>Meet Badani</fullName>
            </value>
            <value>
                <fullName>Vijay Patra</fullName>
            </value>
            <value>
                <fullName>Swati Kannaujiya</fullName>
            </value>
            <value>
                <fullName>Godfrey Gonsalves</fullName>
                <isActive>false</isActive>
                <label>Godfrey Gonsalves</label>
            </value>
            <value>
                <fullName>Himanshu Maheshwari</fullName>
                <isActive>false</isActive>
                <label>Himanshu Maheshwari</label>
            </value>
            <value>
                <fullName>Nandish Shenoy</fullName>
                <isActive>false</isActive>
                <label>Nandish Shenoy</label>
            </value>
            <value>
                <fullName>Riya Sharma</fullName>
                <isActive>false</isActive>
                <label>Riya Sharma</label>
            </value>
            <value>
                <fullName>Rohan Kapoor</fullName>
                <isActive>false</isActive>
                <label>Rohan Kapoor</label>
            </value>
            <value>
                <fullName>Sumeet Gholap</fullName>
                <isActive>false</isActive>
                <label>Sumeet Gholap</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>