force-app/main/default/objects/Support_Request__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request</label>
    <referenceTo>Change_Request__c</referenceTo>
    <relationshipLabel>Support Requests</relationshipLabel>
    <relationshipName>Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>