force-app/main/default/objects/Support_Request__c/fields/Estimated_Efforts_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Efforts_In_Days__c</fullName>
    <label>Estimated Efforts(In Days)</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>