force-app/main/default/objects/Support_Request__c/fields/Planned_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Release_Date__c</fullName>
    <label>Planned Release Date</label>
    <type>Date</type>
</CustomField>