force-app/main/default/objects/Support_Request__c/fields/Related_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Request</label>
    <referenceTo>Support_Request__c</referenceTo>
    <relationshipLabel>Related Requests</relationshipLabel>
    <relationshipName>Related_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>