force-app/main/default/objects/Support_Request__c/fields/Release_Date_for_Production__c.field-meta.xml
<CustomField>
    <fullName>Release_Date_for_Production__c</fullName>
    <label>Release Date for Production</label>
    <type>Date</type>
</CustomField>