force-app/main/default/objects/Support_Request__c/fields/Release_Date_for_UAT__c.field-meta.xml
<CustomField>
    <fullName>Release_Date_for_UAT__c</fullName>
    <label>Release Date for UAT</label>
    <type>Date</type>
</CustomField>