force-app/main/default/objects/Support_Request__c/fields/Request_Raised_by__c.field-meta.xml
<CustomField>
    <fullName>Request_Raised_by__c</fullName>
    <label>Request Raised by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>