force-app/main/default/objects/Support_Request__c/fields/SR_Efforts_Count__c.field-meta.xml
<CustomField>
    <fullName>SR_Efforts_Count__c</fullName>
    <label>SR Efforts Count</label>
    <summaryForeignKey>SR_Effort__c.Support_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>