force-app/main/default/objects/Support_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Request</fullName>
                <default>true</default>
                <label>Service Request</label>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Access Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>