force-app/main/default/objects/Support_Request__c/validationRules/Cant_close_SR_without_details.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_close_SR_without_details</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Owner:User.FirstName = &quot;Compro&quot;,
  Owner:User.FirstName = &quot;Cloudroute&quot;,
  OR(
    ISNEW(),
    ISCHANGED(Status__c)
  ),
  OR(
    ISPICKVAL(Status__c, &quot;Implemented&quot;),
    ISPICKVAL(Status__c, &quot;Resolved&quot;),
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    ISPICKVAL(Status__c, &quot;Duplicate&quot;)
  ),
  OR(
    SR_Efforts_Count__c = 0,
    ISBLANK( Estimated_Efforts_In_Days__c ),
    ISBLANK( Comments__c ),
    ISBLANK( TEXT( Assigned_Person__c )),
    ISBLANK( Release_Date_for_Production__c )
  )
)</errorConditionFormula>
    <errorMessage>@Cloudroute Team: Enter all details in Compro Section before closing SR.
@Yotta Team: Please chatter Cloudroute to close SR</errorMessage>
</ValidationRule>