force-app/main/default/objects/Support_Request__c/listViews/SR_of_Type_Issue.listView-meta.xml
<ListView>
    <fullName>SR_of_Type_Issue</fullName>
    <columns>NAME</columns>
    <columns>Request_Raised_by__c</columns>
    <columns>Subject__c</columns>
    <columns>Type__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Assigned_Person__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Acknowledged,Analysis,Need Clarification,Dev In Progress,Development Complete,UAT,UAT - Reopen,Approved for Deployment,Under Observation,Awaiting User Inputs,On-Hold</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Issue</value>
    </filters>
    <label>SR of Type Issue</label>
</ListView>